- patch added for rate module (translation corrected)

--- a/all/themes/pixelgarage/less/pxlComponents/node-post.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-post.less
@@ -260,6 +260,13 @@
             font-size: 37px;
           }
         }
+
+        .field-name-rate-integration-1 {
+          position: absolute;
+          left: 0;
+          bottom: 0;
+          z-index: 100;
+        }
       }
     }
   }
