--- a/all/themes/pixelgarage/less/fonts.less
+++ b/all/themes/pixelgarage/less/fonts.less
@@ -1,7 +1,8 @@
 /* --------------------------------------------------
  * Pixelgarage fonts
  * --------------------------------------------------*/
-//
+// Google font
+@import 'https://fonts.googleapis.com/css?family=Catamaran:300,800';
 
 //
 // Awesome icon font
@@ -17,19 +18,19 @@
 @pxl-icon-font: 'fontawesome';
 
 // title font
-@pxl-title-font: 'MuseoSans_900', sans-serif;
+@pxl-title-font: 'Catamaran-ExtraBold', sans-serif;
 
 // text fonts
-@pxl-text-font: 'MuseoSans_700', sans-serif;
-@pxl-text-font-light: 'MuseoSans_300', sans-serif;
-@pxl-text-font-medium: 'MuseoSans_700', sans-serif;
-@pxl-text-font-bold: 'MuseoSans_900', sans-serif;
-@pxl-text-font-italic: 'MuseoSans_700', sans-serif;
-@pxl-text-font-light-italic: 'MuseoSans_300', sans-serif;
-@pxl-text-font-bold-italics: 'MuseoSans_900_Italic', sans-serif;
+@pxl-text-font: 'Catamaran-ExtraBold', sans-serif;
+@pxl-text-font-light: 'Catamaran-Light', sans-serif;
+@pxl-text-font-medium: 'Catamaran-ExtraBold', sans-serif;
+@pxl-text-font-bold: 'Catamaran-ExtraBold', sans-serif;
+@pxl-text-font-italic: 'Catamaran-ExtraBold', sans-serif;
+@pxl-text-font-light-italic: 'Catamaran-Light', sans-serif;
+@pxl-text-font-bold-italics: 'Catamaran-ExtraBold', sans-serif;
 
 // handwriter font
-@pxl-text-font-handwriter: 'Pacifico', cursive;
+@pxl-text-font-handwriter: cursive;
 
 // monospace font
 @pxl-text-font-mono: 'Courier', monospace;
@@ -43,48 +44,3 @@
 //
 // font faces
 //
-@font-face {
-  font-family: 'MuseoSans_300';
-  src: url('@{pxl-font-path}/MuseoSans_300/MuseoSans_300.eot');
-  src: url('@{pxl-font-path}/MuseoSans_300/MuseoSans_300.eot') format('embedded-opentype'),
-  url('@{pxl-font-path}/MuseoSans_300/MuseoSans_300.woff2') format('woff2'),
-  url('@{pxl-font-path}/MuseoSans_300/MuseoSans_300.woff') format('woff'),
-  url('@{pxl-font-path}/MuseoSans_300/MuseoSans_300.ttf') format('truetype'),
-  url('@{pxl-font-path}/MuseoSans_300/MuseoSans_300.svg#MuseoSans_300') format('svg');
-}
-@font-face {
-  font-family: 'MuseoSans_700';
-  src: url('@{pxl-font-path}/MuseoSans_700/MuseoSans_700.eot');
-  src: url('@{pxl-font-path}/MuseoSans_700/MuseoSans_700.eot') format('embedded-opentype'),
-  url('@{pxl-font-path}/MuseoSans_700/MuseoSans_700.woff2') format('woff2'),
-  url('@{pxl-font-path}/MuseoSans_700/MuseoSans_700.woff') format('woff'),
-  url('@{pxl-font-path}/MuseoSans_700/MuseoSans_700.ttf') format('truetype'),
-  url('@{pxl-font-path}/MuseoSans_700/MuseoSans_700.svg#MuseoSans_700') format('svg');
-}
-@font-face {
-  font-family: 'MuseoSans_900';
-  src: url('@{pxl-font-path}/MuseoSans_900/MuseoSans_900.eot');
-  src: url('@{pxl-font-path}/MuseoSans_900/MuseoSans_900.eot') format('embedded-opentype'),
-  url('@{pxl-font-path}/MuseoSans_900/MuseoSans_900.woff2') format('woff2'),
-  url('@{pxl-font-path}/MuseoSans_900/MuseoSans_900.woff') format('woff'),
-  url('@{pxl-font-path}/MuseoSans_900/MuseoSans_900.ttf') format('truetype'),
-  url('@{pxl-font-path}/MuseoSans_900/MuseoSans_900.svg#MuseoSans_900') format('svg');
-}
-@font-face {
-  font-family: 'MuseoSans_900_Italic';
-  src: url('@{pxl-font-path}/MuseoSans_900_Italic/MuseoSans_900_Italic.eot');
-  src: url('@{pxl-font-path}/MuseoSans_900_Italic/MuseoSans_900_Italic.eot') format('embedded-opentype'),
-  url('@{pxl-font-path}/MuseoSans_900_Italic/MuseoSans_900_Italic.woff2') format('woff2'),
-  url('@{pxl-font-path}/MuseoSans_900_Italic/MuseoSans_900_Italic.woff') format('woff'),
-  url('@{pxl-font-path}/MuseoSans_900_Italic/MuseoSans_900_Italic.ttf') format('truetype'),
-  url('@{pxl-font-path}/MuseoSans_900_Italic/MuseoSans_900_Italic.svg#MuseoSans_900_Italic') format('svg');
-}
-@font-face {
-  font-family: 'Pacifico';
-  src: url('@{pxl-font-path}/Pacifico/Pacifico.eot');
-  src: url('@{pxl-font-path}/Pacifico/Pacifico.eot') format('embedded-opentype'),
-  url('@{pxl-font-path}/Pacifico/Pacifico.woff2') format('woff2'),
-  url('@{pxl-font-path}/Pacifico/Pacifico.woff') format('woff'),
-  url('@{pxl-font-path}/Pacifico/Pacifico.ttf') format('truetype'),
-  url('@{pxl-font-path}/Pacifico/Pacifico.svg#Pacifico') format('svg');
-}
