--- a/all/themes/pixelgarage/less/footer.less
+++ b/all/themes/pixelgarage/less/footer.less
@@ -22,7 +22,7 @@ footer.footer {
   padding: 0;
   max-height: 266px;
   border: none;
-  background: @pxl-color-blue none;
+  background: white none;
   z-index: @zindex-navbar;
 
   @media @tablet {
