--- a/all/themes/pixelgarage/less/header.less
+++ b/all/themes/pixelgarage/less/header.less
@@ -15,7 +15,7 @@
 header#navbar {
   margin: 0;
   border-bottom: none;
-  background: @pxl-color-blue none;
+  background: white none;
   #pxl-mixins.box-shadow(0 4px 3px -4px gray);
 
   .navbar-top-container > .container {
