--- a/all/themes/pixelgarage/less/pxlComponents/form-confirm.less
+++ b/all/themes/pixelgarage/less/pxlComponents/form-confirm.less
@@ -8,7 +8,7 @@
 
 // Mixins
 // -------------------------
-.resp-submit-button(@color: white; @bg-color: @pxl-color-green; @radius: @border-radius-small) {
+.resp-submit-button(@color: white; @bg-color: @pxl-color-main; @radius: @border-radius-small) {
   display: inline-block;
   vertical-align: middle;
   margin: 0;
