--- a/all/themes/pixelgarage/less/pxlComponents/node-footer.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-footer.less
@@ -22,8 +22,8 @@
   outline: none;
   #pxl-mixins.border-radius(@border-radius-base);
   .border-left-radius(0);
-  border: 1px solid @pxl-color-green;
-  background-color: @pxl-color-green;
+  border: 1px solid @pxl-color-main;
+  background-color: @pxl-color-main;
   opacity: 1.0;
 
   &:hover {
@@ -148,13 +148,13 @@
             .placeholder(@text-color-field);
             #pxl-mixins.border-radius(@border-radius-base);
             .border-right-radius(0);
-            border: 1px solid @pxl-color-green-light;
-            background-color: @pxl-color-green-light;
+            border: 1px solid @pxl-color-main;
+            background-color: @pxl-color-main;
             #pxl-mixins.box-shadow(none);
 
             &:focus {
-              border: 1px solid @pxl-color-green;
-              #pxl-mixins.box-shadow(0 0 2px @pxl-color-green inset);
+              border: 1px solid @pxl-color-main;
+              #pxl-mixins.box-shadow(0 0 2px @pxl-color-main inset);
             }
 
             @media @narrow {
@@ -190,7 +190,7 @@
             padding: 0;
             display: inline-block;
             width: 80%;
-            background: @pxl-color-blue none;
+            background: @pxl-color-main none;
           }
           .form-actions {
             display: inline-block;
@@ -198,7 +198,7 @@
             padding: 0;
             vertical-align: top;
             width: 20%;
-            background: @pxl-color-blue none;
+            background: @pxl-color-main none;
 
             button.btn {
               .form-button;
