--- a/all/themes/pixelgarage/less/pxlComponents/node-page.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-page.less
@@ -56,10 +56,10 @@
 
         a {
           font-family: @pxl-text-font-bold;
-          color: @text-color;
+          color: @link-color;
 
           &:focus, &:hover {
-            color: @pxl-color-green;
+            color: @link-hover-color;
           }
         }
 
