--- a/all/themes/pixelgarage/less/pxlComponents/node-testimonial.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-testimonial.less
@@ -17,7 +17,7 @@
 //
 // webform
 .node.node-testimonial {
-  background-color: @pxl-color-blue-light;
+  background-color: white;
 
   .row {
     .col-sm-12, .col-sm-6 {
@@ -48,7 +48,7 @@
 
         p {
           font-family: @pxl-text-font-bold;
-          color: @pxl-color-blue;
+          color: @text-color;
           line-height: 30px;
           text-align: center;
         }
@@ -59,7 +59,7 @@
         width: 60%;
         #pxl-mixins.wysiwyg-body(24px);
         font-family: @pxl-text-font-light;
-        color: @pxl-color-blue;
+        color: @text-color;
         line-height: 24px;
         text-align: center;
       }
