--- a/all/themes/pixelgarage/less/pxlComponents/webform-submission.less
+++ b/all/themes/pixelgarage/less/pxlComponents/webform-submission.less
@@ -61,16 +61,15 @@
         padding: 5px 10px;
         font-family: @pxl-text-font;
         font-size: @font-size-base;
-        color: @pxl-color-green;
+        color: @link-color;
         text-decoration: none;
         border-radius: 3px;
-        border: 2px solid @pxl-color-green;
-        background: none;
+        border: 2px solid @link-color;
         outline: none;
 
         &:hover, &:active {
           color: #fff;
-          background: @pxl-color-green none;
+          background: @link-hover-color none;
           outline: none;
         }
       }
