--- a/all/themes/pixelgarage/less/pxlComponents/node-facebook.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-facebook.less
@@ -15,7 +15,7 @@
 // -------------------------
 .node.node-facebook-post.view-mode-teaser {
   padding: 20px;
-  background-color: @pxl-color-blue-light;
+  background-color: white;
 
   .row {
     div.col-sm-12 {
@@ -37,14 +37,14 @@
           margin-top: 0;
           font-family: @pxl-text-font-bold;
           #pxl-mixins.font-size-responsive(17px, 14px);
-          color: @pxl-color-blue;
+          color: @text-color;
           line-height: 1.5;
         }
       }
 
       .field-name-body {
         #pxl-mixins.wysiwyg-body(14px; @font-size-base; 14px);
-        color: @pxl-color-blue;
+        color: @text-color;
       }
 
       .field-name-field-link {
@@ -55,7 +55,7 @@
             font-family: @pxl-text-font-light;
             font-size: 14px;
             text-align: left;
-            color: @pxl-color-blue;
+            color: @link-color;
 
             &:hover {
               font-family: @pxl-text-font;
@@ -73,7 +73,7 @@
           font-family: @pxl-text-font-light-italic;
           font-size: 14px;
           text-align: left;
-          color: @pxl-color-blue;
+          color: @text-color;
         }
       }
 
@@ -86,14 +86,14 @@
           font-family: @pxl-text-font;
           font-size: 10px;
           text-align: right;
-          color: @pxl-color-blue;
+          color: @text-color;
 
           &:after {
             content: '\f09a';
             margin-left: 10px;
             font-family: @pxl-icon-font;
             font-size: @font-size-base;
-            color: @pxl-color-blue;
+            color: @text-color;
           }
         }
       }
@@ -107,14 +107,14 @@
           font-family: @pxl-text-font;
           font-size: 10px;
           text-align: left;
-          color: @pxl-color-blue;
+          color: @text-color;
 
           &:after {
             content: 'Likes';
             margin-left: 10px;
             font-family: @pxl-text-font;
             font-size: 10px;
-            color: @pxl-color-blue;
+            color: @text-color;
           }
         }
       }
@@ -133,7 +133,7 @@
           padding: 15px 0;
           font-family: @pxl-text-font-bold;
           #pxl-mixins.font-size-responsive(25px, 18px);
-          color: @pxl-color-blue;
+          color: @text-color;
         }
       }
 
@@ -155,14 +155,14 @@
         margin: 0 0 20px;
 
         #pxl-mixins.wysiwyg-body(17px; 20px; 17px);
-        color: @pxl-color-blue;
+        color: @text-color;
 
         a {
           text-decoration: underline;
-          color: @pxl-color-blue;
+          color: @link-color;
 
           &:hover {
-            color: @pxl-color-green;
+            color: @link-hover-color;
             text-decoration: none;
           }
         }
@@ -176,10 +176,10 @@
             #pxl-mixins.font-size-responsive(17px);
             text-align: left;
             text-decoration: underline;
-            color: @pxl-color-blue;
+            color: @link-color;
 
             &:hover {
-              color: @pxl-color-green;
+              color: @link-hover-color;
               text-decoration: none;
             }
           }
@@ -195,7 +195,7 @@
           font-family: @pxl-text-font-light-italic;
           font-size: 14px;
           text-align: left;
-          color: @pxl-color-blue;
+          color: @text-color;
         }
       }
 
@@ -208,14 +208,14 @@
           font-size: 12px;
           text-align: right;
           line-height: 1;
-          color: @pxl-color-blue;
+          color: @text-color;
 
           &:before {
             content: '\f09a';
             margin-right: 10px;
             font-family: @pxl-icon-font;
             font-size: @font-size-base;
-            color: @pxl-color-blue;
+            color: @text-color;
           }
         }
       }
@@ -230,14 +230,14 @@
           font-size: 12px;
           text-align: left;
           line-height: 1;
-          color: @pxl-color-blue;
+          color: @text-color;
 
           &:after {
             content: 'Likes';
             margin-left: 10px;
             font-family: @pxl-text-font;
             font-size: 12px;
-            color: @pxl-color-blue;
+            color: @text-color;
           }
         }
       }
