--- a/all/themes/pixelgarage/less/pxlComponents/node-tweet.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-tweet.less
@@ -16,7 +16,7 @@
 // -------------------------
 .node.node-twitter-tweet-feed.view-mode-teaser {
   padding: 20px;
-  background-color: @pxl-color-blue-light;
+  background-color: white;
 
   .row {
     div.col-sm-12 {
@@ -58,7 +58,7 @@
           font-family: @pxl-text-font-light;
           font-size: 14px;
           text-align: left;
-          color: @pxl-color-blue;
+          color: @text-color;
 
           &:before {
             content: '@';
@@ -77,21 +77,21 @@
           font-family: @pxl-text-font-light-italic;
           font-size: 14px;
           text-align: left;
-          color: @pxl-color-blue;
+          color: @text-color;
         }
       }
 
       .field-name-field-tweet-contents {
         margin: 0 0 20px;
         #pxl-mixins.wysiwyg-body(14px; @font-size-base; 14px);
-        color: @pxl-color-blue;
+        color: @text-color;
 
         a {
           text-decoration: underline;
-          color: @pxl-color-blue;
+          color: @link-color;
 
           &:hover {
-            color: @pxl-color-green;
+            color: @link-hover-color;
             text-decoration: none;
           }
         }
@@ -106,14 +106,14 @@
           font-family: @pxl-text-font;
           font-size: 10px;
           text-align: right;
-          color: @pxl-color-blue;
+          color: @text-color;
 
           &:after {
             content: '\f099';
             margin-left: 10px;
             font-family: @pxl-icon-font;
             font-size: @font-size-base;
-            color: @pxl-color-blue;
+            color: @text-color;
           }
         }
       }
@@ -137,7 +137,7 @@
           padding: 15px 0;
           font-family: @pxl-text-font-bold;
           #pxl-mixins.font-size-responsive(25px, 18px);
-          color: @pxl-color-blue;
+          color: @text-color;
         }
       }
 
@@ -164,7 +164,7 @@
           font-family: @pxl-text-font-light;
           #pxl-mixins.font-size-responsive(16px, 14px);
           text-align: left;
-          color: @pxl-color-blue;
+          color: @text-color;
 
           &:before {
             content: '@';
@@ -183,7 +183,7 @@
           font-family: @pxl-text-font-light-italic;
           #pxl-mixins.font-size-responsive(16px, 14px);
           text-align: left;
-          color: @pxl-color-blue;
+          color: @text-color;
         }
       }
 
@@ -191,14 +191,14 @@
         margin: 0 0 20px;
 
         #pxl-mixins.wysiwyg-body(17px; 20px; 17px);
-        color: @pxl-color-blue;
+        color: @text-color;
 
         a {
           text-decoration: underline;
-          color: @pxl-color-blue;
+          color: @link-color;
 
           &:hover {
-            color: @pxl-color-green;
+            color: @link-hover-color;
             text-decoration: none;
           }
         }
@@ -212,7 +212,7 @@
           font-family: @pxl-text-font;
           font-size: 12px;
           text-align: right;
-          color: @pxl-color-blue;
+          color: @text-color;
 
           &:before {
             content: '\f099';
@@ -235,10 +235,10 @@
           a {
             padding: 5px 12px 7px;
             text-decoration: underline;
-            color: @pxl-color-blue;
+            color: @link-color;
 
             &:hover {
-              color: @pxl-color-green;
+              color: @link-hover-color;
               text-decoration: none;
             }
           }
