--- a/all/themes/pixelgarage/less/pxlComponents/webform-confirmation.less
+++ b/all/themes/pixelgarage/less/pxlComponents/webform-confirmation.less
@@ -19,9 +19,9 @@
   padding: 15px 30px;
   width: 80%;
   color: #fff;
-  border: 1px solid @pxl-color-green;
+  border: 1px solid @pxl-color-main;
   #pxl-mixins.border-radius(5px);
-  background-color: @pxl-color-green;
+  background-color: @pxl-color-main;
 
   .confirmation-title {
     font-family: @pxl-text-font-bold;
